<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#D7E8D0">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <Button
            android:id="@+id/b2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:layout_marginBottom="20dp"
            android:layout_weight="0.4"
            android:foreground="@android:drawable/ic_input_delete"
            android:hint="-"
            android:onClick="back"
            android:textSize="20dp"
            app:cornerRadius="15dp" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="3">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical"
                >

                <TextView
                    android:id="@+id/t1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:fontFamily="sans-serif"
                    android:gravity="center"
                    android:text="@string/а1"
                    android:textColor="#0E0E0E"
                    android:textSize="30dp"
                    android:typeface="normal" />

                <TextView
                    android:id="@+id/t2"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:fontFamily="sans-serif"
                    android:gravity="center"
                    android:text="@string/d"
                    android:textColor="#0E0E0E"
                    android:textSize="30dp"
                    android:typeface="normal" />

                <TextView
                    android:id="@+id/t3"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:fontFamily="sans-serif"
                    android:gravity="center"
                    android:text="@string/n"
                    android:textColor="#0E0E0E"
                    android:textSize="30dp"
                    android:typeface="normal" />
                <TextView
                    android:id="@+id/t4"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:fontFamily="sans-serif"
                    android:gravity="center"
                    android:text="@string/an"
                    android:textColor="#0E0E0E"
                    android:textSize="30dp"
                    android:typeface="normal" />
                <TextView
                    android:id="@+id/t5"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:fontFamily="sans-serif"
                    android:gravity="center"
                    android:text="@string/Sn"
                    android:textColor="#0E0E0E"
                    android:textSize="30dp"
                    android:typeface="normal" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_weight="1">

                <TextView
                    android:id="@+id/a1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:fontFamily="sans-serif"
                    android:gravity="center"
                    android:text="@string/а1Edit"
                    android:textColor="#0E0E0E"
                    android:textSize="30dp"
                    android:typeface="normal" />

                <TextView
                    android:id="@+id/d"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:fontFamily="sans-serif"
                    android:gravity="center"
                    android:text="@string/dEdit"
                    android:textColor="#0E0E0E"
                    android:textSize="30dp"
                    android:typeface="normal" />

                <TextView
                    android:id="@+id/n"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:fontFamily="sans-serif"
                    android:gravity="center"
                    android:text="@string/nEdit"
                    android:textColor="#0E0E0E"
                    android:textSize="30dp"
                    android:typeface="normal" />
                <TextView
                    android:id="@+id/an"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:fontFamily="sans-serif"
                    android:gravity="center"
                    android:text="@string/nEdit"
                    android:textColor="#0E0E0E"
                    android:textSize="30dp"
                    android:typeface="normal" />
                <TextView
                    android:id="@+id/Sn"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:fontFamily="sans-serif"
                    android:gravity="center"
                    android:text="@string/nEdit"
                    android:textColor="#0E0E0E"
                    android:textSize="30dp"
                    android:typeface="normal" />

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical"
                >

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:fontFamily="sans-serif"
                    android:gravity="center"
                    android:text="@string/a1Descript"
                    android:textColor="#0E0E0E"
                    android:textSize="20sp"
                    android:typeface="normal" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:fontFamily="sans-serif"
                    android:gravity="center"
                    android:text="@string/dDescript"
                    android:textColor="#0E0E0E"
                    android:textSize="20sp"
                    android:typeface="normal" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:fontFamily="sans-serif"
                    android:gravity="center"
                    android:text="@string/nDescript"
                    android:textColor="#0E0E0E"
                    android:textSize="20sp"
                    android:typeface="normal" />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:fontFamily="sans-serif"
                    android:gravity="center"
                    android:text="@string/anDescript"
                    android:textColor="#0E0E0E"
                    android:textSize="20sp"
                    android:typeface="normal" />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:fontFamily="sans-serif"
                    android:gravity="center"
                    android:text="@string/SnDescript"
                    android:textColor="#0E0E0E"
                    android:textSize="20sp"
                    android:typeface="normal" />
            </LinearLayout>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:orientation="vertical">

            <Button
                android:id="@+id/sendEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:layout_weight="1"
                android:onClick="Send"
                android:text="@string/mail"
                android:textSize="20dp"
                app:cornerRadius="15dp" />
        </LinearLayout>


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>